--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -21,14 +23,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="io.appwrite.views.CallbackActivity" android:exported="true">
-        <intent-filter android:label="android_web_auth">
-            <action android:name="android.intent.action.VIEW" />
-            <category android:name="android.intent.category.DEFAULT" />
-            <category android:name="android.intent.category.BROWSABLE" />
-            <data android:scheme="appwrite-callback-6551899251b84f7fb42a" />
-        </intent-filter>
-        </activity>
+        <!--        <activity android:name="io.appwrite.views.CallbackActivity" android:exported="true">-->
+        <!--        <intent-filter android:label="android_web_auth">-->
+        <!--            <action android:name="android.intent.action.VIEW" />-->
+        <!--            <category android:name="android.intent.category.DEFAULT" />-->
+        <!--            <category android:name="android.intent.category.BROWSABLE" />-->
+        <!--            <data android:scheme="appwrite-callback-6551899251b84f7fb42a" />-->
+        <!--        </intent-filter>-->
+        <!--        </activity>-->
     </application>
 
 </manifest>
